# Oil-production-optimization

./: CMakeLists.txt  README.md  compile_win.bat
diploma/first_pages/: Копия Лист задания (шаблон).wbk  Копия Лист задания Баранов.wbk  Копия Титулка (шаблон).wbk  Лист задания (шаблон, изменение приказа).docx  Лист задания Баранов.docx  Титулка Баранов.docx
diploma/presentation/: Текст к презентации.docx
diploma/theory/: manual_micro.docx  zapusk_s_obemnym_istochnikom.docx  Инструкция_фильтрация.docx  Ковалев прогноз разработки.djvu
res/input/: fieldSettings.json  gaussNewtonSettings.json  well capacity explanation.txt  well capacity.txt  well parameters.json  well task parameters.txt
res/models/goodModel0/: FilesConfig.cfg  Pressure Change.txt  alignment.txt  filtr.cfg
res/output/: Allowed values.txt  Residual functional.txt  Well centers.txt  production oil.txt  production water.txt
res/output/Produced phase by day/: Produced oil by day Well1 iteration10.txt  (+89 more)
src/: DenseSLAE.cpp  DenseSLAE.h  GNM.cpp  GNM.h  GridData.cpp  GridData.h  HDPoM.h  MatrixVector.h  functions.h  main.cpp
src/DataManagement/: ConfigureReader.cpp  ConfigureReader.h  HDPoM.cpp  HDPoM.h  ResultsWriter.cpp  ResultsWriter.h  fileSystemFunctions.h
src/InverseProblem/: DenseSLAE.h  FieldGrid.cpp  FieldGrid.h  GaussNewton.cpp  GaussNewton.h
src/System/: Timer.h
src/visualization/: CreateGraph.py  GeometryAfter.py  GeometryBefore.py  InitialPosWells.py  OptimizedPosWells.py  PhaseByDay.py  PhaseByIter.py  ResidualFunctional.py  Visualize.py
visualization/: Phases.py  PhasesByDay.py  ResidualFunctional.py  Visualize.py
(+4815 files in other folders)
